--- a/index.html
+++ b/index.html
@@ -33,5 +33,120 @@
              </div>
         </div>
     </nav>
+
+
+
+
+
+  <!-- Navbar is completed -->
+
+
+<div class="container">                  
+
+    <!-- left sidebar  -->
+
+    <div class="left-sidebar">
+            <div class="sidebar-profile-box">
+                <img src="images/cover-pic.png" width="100%">
+                <div class="sidebar-profile-info">
+                    <img src="images/user-1.png">
+                    <h1>Pranali Dalvi</h1>
+                    <h3>web developer at microsoft</h3>
+                    <ul>
+                        <li>your profile views<span>52</span></li>
+                        <li>your post views<span>810</span></li>
+                        <li>your connection<span>205</span></li>
+                    </ul>
+                </div>
+                <div class="sidebar-profile-link">
+                    <a href="#" ><img src="images/items.png">My items</a>
+                    <a href="#" ><img src="images/premium.png">Try premium</a>
+                </div>
+            </div>
+            <div class="sidebar-activity">
+                <h3>RECENT</h3>
+                <a href="#"><img src="images/recent.png">Web Development</a>
+                <a href="#"><img src="images/recent.png">User Interface</a>
+                <a href="#"><img src="images/recent.png">Online Learning</a>
+                <a href="#"><img src="images/recent.png">Learn Online</a>
+                <a href="#"><img src="images/recent.png">Code Better</a>
+                <a href="#"><img src="images/recent.png"> Group Learning</a>
+                <h3>GROUPS</h3>
+                <a href="#"><img src="./images/group.png">Web Design Group </a>
+                <a href="#"><img src="./images/group.png">HTML & CSS Learners </a>
+                <a href="#"><img src="./images/group.png">Python & JavaScript Group </a>
+                <a href="#"><img src="./images/group.png">Learn Coding Online </a>
+                <h3>HASHTAG</h3>
+                <a href="#"><img src="./images/hashtag.png">WebDevelopment </a>
+                <a href="#"><img src="./images/hashtag.png">UserInterface </a>
+                <a href="#"><img src="./images/hashtag.png">OnlineLearning </a>
+                <div class="discover-more-link">
+                    <a href="#">Discover More</a>
+                </div>
+            </div>
+    </div>
+
+    <!-- main container  -->
+
+    <div class="main-content">
+
+    </div>
+
+    <!-- right sidebar -->
+
+    <div class="right-sidebar">
+       <div class="sidebar-news">
+        <img src="images/more.png" class="info-icon">
+        <h3>Trending News</h3>
+        <a href="#">High Demand For Skilled Manpower</a>
+        <span>1d ago &middot; 10,934 readers</span>
+
+        <a href="#">Careers growing horizontally too</a>
+        <span>19h ago &middot; 1,552 readers</span>
+
+        <a href="#">Less work visa for US, more for UK</a>
+        <span>1d ago &middot; 27,290 readers</span>
+        
+        <a href="#">More hiring = higher confidence?</a>
+        <span>18h ago &middot; 8,208 readers</span>
+
+        <a href="#">Gautam adani is the worlds third richest</a>
+        <span>12h ago &middot; 4,205 readers</span>
+
+        <a href="#" class="read-more-link">Read More</a>
+       </div> 
+
+       <div class="sidebar-ad">
+             <small>Ad &middot; &middot; &middot;</small>
+             <p>Master the 5 principles of web design</p>
+             <div>
+                <img src="images/user-1.png">
+                <img src="images/mi-logo.png">
+             </div>
+             <b>Brand and Demand in Xiaomi</b>
+             <a href="#" class="ad-link">Leaen More</a>
+       </div>
+            <div class="sidebar-useful-links">
+                <a href="#">About</a>
+                <a href="#">Accessibility</a>
+                <a href="#">Help Center</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Advertising</a>
+                <a href="#">Get The App</a>
+                <a href="#">More</a>
+
+                <div class="copyright-msg">
+                    <img src="images/logo.png" >
+                    <p>Linkedup &#169; 2022. All right reserved</p>
+                </div>
+            </div>
+    </div>
+</div>
+
+
+
+
+
+
 </body>
 </html>
